[package]
name = "winapi_spike"
version = "0.1.0"
authors = ["Mark Sta Ana <booyaabooyaabooyaa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }